--- a/kb.html
+++ b/kb.html
@@ -214,19 +214,7 @@ Nav Bar / Header
             <div class="form-inline">
               <kbd-label-editor label-index="0" hint-text="Specify the primary text of the keycap; typically displayed top-left, unless the centering options are used."></kbd-label-editor>
               <kbd-label-editor label-index="2" hint-text="Specify secondary text for the keycap; typically displayed top-right."></kbd-label-editor>
-              <div class="form-group form-group-sm">
-                <div class="checkbox hint--top hint--rounded"
-                     data-hint="Center the keycap text horizontally; the labels that would normally be left-aligned will be centered instead.">
-                  <label>
-                    <input id="centerx" type="checkbox"
-                           ng-model="multi.centerx"
-                           ng-change="updateMulti('centerx')"
-                           ng-blur="validateMulti('centerx')"
-                           ng-disabled="selectedKeys.length<1">
-                    Center X
-                  </label>
-                </div>
-              </div>
+              <kbd-multi-check field="centerx" hint-text="Center the keycap text horizontally; the labels that would normally be left-aligned will be centered instead.">Center X</kbd-multi-check>
             </div>
           </div>
         </div>
@@ -238,19 +226,7 @@ Nav Bar / Header
             <div class="form-inline">
               <kbd-label-editor label-index="6" hint-text="Specify secondary text for the keycap; typically displayed center-left.  You can specify a horizontal rule with <hr>."></kbd-label-editor>
               <kbd-label-editor label-index="7" hint-text="Specify secondary text for the keycap; typically displayed center-right."></kbd-label-editor>
-              <div class="form-group form-group-sm">
-                <div class="checkbox hint--top hint--rounded"
-                     data-hint="Center the keycap text vertically; the labels that would normally be top-aligned will be centered instead.">
-                  <label>
-                    <input id="centery" type="checkbox"
-                           ng-model="multi.centery"
-                           ng-change="updateMulti('centery')"
-                           ng-blur="validateMulti('centery')"
-                           ng-disabled="selectedKeys.length<1">
-                    Center Y
-                  </label>
-                </div>
-              </div>
+              <kbd-multi-check field="centery" hint-text="Center the keycap text vertically; the labels that would normally be top-aligned will be centered instead.">Center Y</kbd-multi-check>
             </div>
           </div>
         </div>
@@ -273,154 +249,72 @@ Nav Bar / Header
             <div class="form-inline">
               <kbd-label-editor label-index="4" hint-text="Specify the primary side-printed text for the keycap."></kbd-label-editor>
               <kbd-label-editor label-index="5" hint-text="Specify secondary side-printed text for the keycap."></kbd-label-editor>
-              <div class="form-group form-group-sm">
-                <div class="checkbox hint--top hint--rounded"
-                     data-hint="Center the side-printed text.">
-                  <label>
-                    <input id="centerf" type="checkbox"
-                           ng-model="multi.centerf"
-                           ng-change="updateMulti('centerf')"
-                           ng-blur="validateMulti('centerf')"
-                           ng-disabled="selectedKeys.length<1">
-                    Center
-                  </label>
-                </div>
-              </div>
+              <kbd-multi-check field="centerf" hint-text="Center the side-printed text.">Center</kbd-multi-check>
             </div>
           </div>
         </div>
 
         <!-- Legend Size -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="textsizeeditor">Legend Size:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="fontheight-editor">Legend Size:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                  data-hint="Specify the primary and secondary sizes for the keycap legends. The primary size affects only the primary text legend, while the secondary size is applied to all other legends.">
-              <div class="form-group form-group-sm">
-                <input id="textsizeeditor" class="form-control input-sm" size="6" type='number' min="1" max="9"
-                       ng-model="multi.fontheight"
-                       ng-change="updateMulti('fontheight')"
-                       ng-blur="validateMulti('fontheight')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                /
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="6" type='number' min="1" max="9"
-                       ng-model="multi.fontheight2"
-                       ng-change="updateMulti('fontheight2')"
-                       ng-blur="validateMulti('fontheight2')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
+              <kbd-multi-numbox field="fontheight" size="6" min="1" max="9"></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> / </div>
+              <kbd-multi-numbox field="fontheight2" size="6" min="1" max="9"></kbd-multi-numbox>
             </div>
           </div>
         </div>
 
         <!-- Width -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="widtheditor">Width:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="width-editor">Width:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                  data-hint="Specify the primary and secondary widths for the keycap. The secondary width is used to specify the size of non-rectangular or stepped keys.">
-              <div class="form-group form-group-sm">
-                <input id="widtheditor" class="form-control input-sm" size="6" type='number' min='0.5' max='12' step='{{sizeStep}}'
-                       ng-model="multi.width"
-                       ng-change="updateMulti('width')"
-                       ng-blur="validateMulti('width')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                /
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="6" type='number' min='0.5' max='12' step='{{sizeStep}}'
-                       ng-model="multi.width2"
-                       ng-change="updateMulti('width2')"
-                       ng-blur="validateMulti('width2')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
+              <kbd-multi-numbox field="width" size="6" min="0.5" max="12" step='{{sizeStep}}'></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> / </div>
+              <kbd-multi-numbox field="width2" size="6" min="0.5" max="12" step='{{sizeStep}}'></kbd-multi-numbox>
             </div>
           </div>
         </div>
 
         <!-- Height -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="heighteditor">Height:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="height-editor">Height:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                  data-hint="Specify the primary and secondary heights for the keycap. The secondary height is used to specify the size of non-rectangular or stepped keys.">
-              <div class="form-group form-group-sm">
-                <input id="heighteditor" class="form-control input-sm" size="6" type='number' min='0.5' max='12' step='{{sizeStep}}'
-                       ng-model="multi.height"
-                       ng-change="updateMulti('height')"
-                       ng-blur="validateMulti('height')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                /
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="6" type='number' min='0.5' max='12' step='{{sizeStep}}'
-                       ng-model="multi.height2"
-                       ng-change="updateMulti('height2')"
-                       ng-blur="validateMulti('height2')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
+              <kbd-multi-numbox field="height" size="6" min="0.5" max="12" step='{{sizeStep}}'></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> / </div>
+              <kbd-multi-numbox field="height2" size="6" min="0.5" max="12" step='{{sizeStep}}'></kbd-multi-numbox>
             </div>
           </div>
         </div>
 
         <!-- X -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="xeditor">X:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="x-editor">X:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                  data-hint="Specify the X position of the keycap. An X-offset can also be specified to indicate how non-rectangular keys should be displayed.">
-              <div class="form-group form-group-sm">
-                <input id="xeditor" class="form-control input-sm" size="6" type='number' min='0' max='36' step='{{moveStep}}'
-                       ng-model="multi.x"
-                       ng-change="updateMulti('x')"
-                       ng-blur="validateMulti('x')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                +
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="6" type='number' min='-6' max='6' step='{{moveStep}}'
-                       ng-model="multi.x2"
-                       ng-change="updateMulti('x2')"
-                       ng-blur="validateMulti('x2')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
+              <kbd-multi-numbox field="x" size="6" min="0" max="36" step='{{moveStep}}'></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> + </div>
+              <kbd-multi-numbox field="x2" size="6" min="-6" max="6" step='{{moveStep}}'></kbd-multi-numbox>
             </div>
           </div>
         </div>
 
         <!-- Y -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="yeditor">Y:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="y-editor">Y:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                  data-hint="Specify the Y position of the keycap. A Y-offset can also be specified to indicate how non-rectangular keys should be displayed.">
-              <div class="form-group form-group-sm">
-                <input id="yeditor" class="form-control input-sm" size="6" type='number' min='0' max='36' step='{{moveStep}}'
-                       ng-model="multi.y"
-                       ng-change="updateMulti('y')"
-                       ng-blur="validateMulti('y')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                +
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="6" type='number' min='-6' max='6' step='{{moveStep}}'
-                       ng-model="multi.y2"
-                       ng-change="updateMulti('y2')"
-                       ng-blur="validateMulti('y2')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
+              <kbd-multi-numbox field="y" size="6" min="0" max="36" step='{{moveStep}}'></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> + </div>
+              <kbd-multi-numbox field="y2" size="6" min="-6" max="6" step='{{moveStep}}'></kbd-multi-numbox>
             </div>
           </div>
         </div>
@@ -491,37 +385,15 @@ Nav Bar / Header
 
         <!-- Rotation -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="angleeditor">Rotation:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="rotation_angle-editor">Rotation:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                  data-hint="Specify the angle (in degrees) by which to rotate the keycaps, and the x &amp; y coordinates of the center of rotation.">
-              <div class="form-group form-group-sm">
-                <input id="angleeditor" class="form-control input-sm" size="3" type="number" min="-180" max="180" step="{{rotateStep}}"
-                       ng-model="multi.rotation_angle"
-                       ng-change="updateMulti('rotation_angle')"
-                       ng-blur="validateMulti('rotation_angle')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                &#176;
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="3" type="number" min="0" max="36" step="{{moveStep}}"
-                       ng-model="multi.rotation_x"
-                       ng-change="updateMulti('rotation_x')"
-                       ng-blur="validateMulti('rotation_x')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
-              <div class="form-group form-group-sm">
-                ,
-              </div>
-              <div class="form-group form-group-sm">
-                <input class="form-control input-sm" size="3" type="number" min="0" max="36" step="{{moveStep}}"
-                       ng-model="multi.rotation_y"
-                       ng-change="updateMulti('rotation_y')"
-                       ng-blur="validateMulti('rotation_y')"
-                       ng-disabled="selectedKeys.length<1">
-              </div>
+              <kbd-multi-numbox field="rotation_angle" size="3" min="-180" max="180" step='{{rotateStep}}'></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> &#176; </div>
+              <kbd-multi-numbox field="rotation_x" size="6" min="0" max="36" step='{{moveStep}}'></kbd-multi-numbox>
+              <div class="form-group form-group-sm"> , </div>
+              <kbd-multi-numbox field="rotation_y" size="6" min="0" max="36" step='{{moveStep}}'></kbd-multi-numbox>
             </div>
           </div>
         </div>
@@ -531,32 +403,8 @@ Nav Bar / Header
           <label class="control-label col-md-3 col-lg-3 text-nowrap">Misc:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline">
-              <div class="form-group form-group-sm">
-                <div class="checkbox hint--top hint--rounded"
-                     data-hint="Specify whether the selected keys should be rendered slightly transparently; this is useful to draw attention to the other, non-ghosted keycaps.">
-                  <label>
-                    <input id="ghosteditor" type="checkbox"
-                           ng-model="multi.ghost"
-                           ng-change="updateMulti('ghost')"
-                           ng-blur="validateMulti('ghost')"
-                           ng-disabled="selectedKeys.length<1">
-                    Ghosted
-                  </label>
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <div class="checkbox hint--top hint--rounded"
-                     data-hint="Specify whether the selected keys are 'stepped', i.e., part of the key is at a lower height than the rest.  The secondary 'width' indicates the width of the stepped part.">
-                  <label>
-                    <input id="steppededitor" type="checkbox"
-                           ng-model="multi.stepped"
-                           ng-change="updateMulti('stepped')"
-                           ng-blur="validateMulti('stepped')"
-                           ng-disabled="selectedKeys.length<1">
-                    Stepped
-                  </label>
-                </div>
-              </div>
+              <kbd-multi-check field="ghost" hint-text="Specify whether the selected keys should be rendered slightly transparently; this is useful to draw attention to the other, non-ghosted keycaps.">Ghosted</kbd-multi-check>
+              <kbd-multi-check field="stepped" hint-text="Specify whether the selected keys are 'stepped', i.e., part of the key is at a lower height than the rest.  The secondary 'width' indicates the width of the stepped part.">Stepped</kbd-multi-check>
             </div>
           </div>
         </div>
@@ -843,6 +691,32 @@ Options Dialog
                 colorpicker="hex" colorpicker-close-on-select="true" colorpicker-position="{{pickerPosition || 'bottom'}}">&nbsp;</button>
       </span>
     </div>
+  </div>
+</script>
+
+<!-- Simple Editor Templates -->
+<script type="text/ng-template" id="multiCheck.html">
+  <div class="form-group form-group-sm">
+    <div class="checkbox hint--top hint--rounded" ng-attr-data-hint="{{hintText}}">
+      <label>
+        <input id="{{field}}" type="checkbox"
+               ng-model="$parent.multi[field]"
+               ng-change="$parent.updateMulti(field)"
+               ng-blur="$parent.validateMulti(field)"
+               ng-disabled="$parent.selectedKeys.length<1">
+        <span ng-transclude></span>
+      </label>
+    </div>
+  </div>
+</script>
+
+<script type="text/ng-template" id="multiNumbox.html">
+  <div class="form-group form-group-sm">
+    <input id="{{field}}-editor" class="form-control input-sm" size="{{size}}" type='number' min="{{min}}" max="{{max}}" step="{{step || 1}}"
+           ng-model="$parent.multi[field]"
+           ng-change="$parent.updateMulti(field)"
+           ng-blur="$parent.validateMulti(field)"
+           ng-disabled="$parent.selectedKeys.length<1">
   </div>
 </script>
 
